Added button to make computer play first.

--- a/static/index.html
+++ b/static/index.html
@@ -24,6 +24,8 @@
     <button id="newGame" type="button">New Game</button>
     <button id="plus" type="button">+</button>
     <button id="minus" type="button">-</button>
+    <br/>
+    <button id="computerFirst" type="button">Computer Plays First</button>
   </div>
   <p id="status" class="statuses"></p>
   <div id="frame">
