--- a/static/index.html
+++ b/static/index.html
@@ -7,7 +7,7 @@
 
 
       <link rel="stylesheet" href="static/css/style.css">
-
+      <link rel="shortcut icon" type ="image/x-icon" href="static/pictrues/favicon.ico">
 
 </head>
 
