Edited html to change path to static files.

--- a/static/index.html
+++ b/static/index.html
@@ -6,8 +6,8 @@
 
 
 
-      <link rel="stylesheet" href="static/css/style.css">
-      <link rel="shortcut icon" type ="image/x-icon" href="static/images/favicon.ico">
+      <link rel="stylesheet" href="css/style.css">
+      <link rel="shortcut icon" type ="image/x-icon" href="images/favicon.ico">
 
 </head>
 
@@ -42,7 +42,7 @@
   </p>
 </html>
 
-    <script src="static/js/index.js"></script>
+    <script src="js/index.js"></script>
 
 </body>
 </html>
