Added discussion page.

--- a/static/index.html
+++ b/static/index.html
@@ -19,7 +19,7 @@
 </head>
 
 <body>
-  <h1><a href="https://arxiv.org/pdf/1301.1672v1.pdf">NoTakTo</a></h1>
+  <h1>NoTakTo</h1>
   <div id="buttons">
     <button id="newGame" type="button">New Game</button>
     <button id="plus" type="button">+</button>
@@ -38,6 +38,7 @@
       <li>Red and Blue take turns playing X's.</li>
       <li>A board with three in a row is dead.</li>
       <li>Whoever kills the last board, loses.</li>
+      <li><a href="discussion.html">More discussion.</a></li>
     </ul>
   </p>
 </html>
