--- a/static/index.html
+++ b/static/index.html
@@ -27,7 +27,10 @@
     <br/>
     <button id="computerFirst" type="button">Computer Plays First</button>
   </div>
-  <p id="status" class="statuses"></p>
+  <div>
+    <p id="status" class="statuses"></p>
+    <p id="score" class="scores">Human: 0 Computer: 0</p>
+  </div>
   <div id="frame">
     <canvas id="1" width=186 height=186 class="boards">
      Your browser does not support HTML5.
