Added button to toggle monoid labels.

--- a/notakto/static/index.html
+++ b/notakto/static/index.html
@@ -26,6 +26,8 @@
     <button id="minus" type="button">-</button>
     <br/>
     <button id="computerFirst" type="button">Computer Plays First</button>
+    <br/>
+    <button id="showLabels" type="button">Show Labels</button>
   </div>
   <div>
     <p id="status" class="statuses"></p>
