Temporarilu disabled labels.

--- a/notakto/static/index.html
+++ b/notakto/static/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+http://famouspoetsandpoems.com/poets/t__s__eliot/poems/15121<!DOCTYPE html>
 <html >
 <head>
   <meta charset="UTF-8">
