--- a/static/index.html
+++ b/static/index.html
@@ -1,13 +1,154 @@
 <!DOCTYPE html>
 <html >
-<head>
-  <meta charset="UTF-8">
-  <title>Hurd-Sullivan</title>
-      <!--<link rel="stylesheet" href="css/style.css">
-      <link rel="shortcut icon" type ="image/x-icon" href="images/favicon.ico">-->
-</head>
+    <head>
+      <meta charset="UTF-8">
+      <title>Hurd-Sullivan</title>
+          <link rel="shortcut icon" type ="image/x-icon" href="images/favicon.ico">-->
+          <meta charset="utf-8">
+          <meta name="viewport" content="width=device-width, initial-scale=1">
+          <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+          <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet" type="text/css">
+          <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet" type="text/css">
+          <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+          <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+          <link rel="stylesheet" type="text/css" href="css/styles.css">
+    </head>
 
-<body>
-  <h1><a href="notakto/index.html">NoTakTo</a></h1>
-</body>
+    <body id="myPage" data-spy="scroll" data-target=".navbar" data-offset="60">
+        <h1><a href="notakto/index.html">NoTakTo</a></h1>
+        <nav class="navbar navbar-default navbar-fixed-top">
+            <div class="container">
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                    <a class="navbar-brand" href="#myPage">H-S</a>
+                </div>
+                <div class="collapse navbar-collapse" id="myNavbar">
+                    <ul class="nav navbar-nav navbar-right">
+                        <li><a href="#lyman">LYMAN</a></li>
+                        <li><a href="#glenn">GLENN</a></li>
+                        <li><a href="#rebecca">REBECCA</a></li>
+                        <li><a href="#drew">DREW</a></li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+
+        <div class="jumbotron text-center">
+            <h1>Hurd-Sullivan</h1>
+            <p>Software. Because it's pretty neat.</p>
+            <form>
+                <div class="input-group">
+                    <input type="email" class="form-control" size="50" placeholder="This doesn't go anywhere right now, but I suppose it could grab an email address" required>
+                    <div class="input-group-btn">
+                    <button type="button" class="btn btn-danger">Subscribe</button>
+                    </div>
+                </div>
+            </form>
+        </div>
+
+        <!-- Container (About Section) -->
+        <div id="lyman" class="container-fluid">
+            <div class="row">
+                <div class="col-sm-4">
+                    <img src="images/Lyman.jpg"/>
+                </div>
+                <div class="col-sm-8">
+                    <h2>Lyman "A God Living Amongst Mankind" Hurd</h2><br>
+                    <h4>Lyman regularly moves mountains and shifts the ocean's tides</h4><br>
+                    <p>Please prove that to be true in this section</p><br>
+                    <button class="btn btn-default btn-lg" href="mailto:glennqhurd@gmail.com">Email Lyman. He's got tons of free time</button>
+                </div>
+            </div>
+        </div>
+
+        <div id="glenn" class="container-fluid">
+            <div class="row">
+                <div class="col-sm-8">
+                    <h2>Glenn "I want to learn the ways of the force like my father" Hurd</h2><br>
+                    <h4>Young Padawan</h4><br>
+                    <p>Please prove that to be true in this section</p><br>
+                    <button class="btn btn-default btn-lg">Email Glenn</button>
+                </div>
+                <div class="col-sm-4">
+                    <img src="images/glenn.jpg"/>
+                </div>
+            </div>
+        </div>
+
+        <div id="rebecca" class="container-fluid">
+            <div class="row">
+                <div class="col-sm-4">
+                    <img src="images/Rebecca.jpg"/>
+                </div>
+                <div class="col-sm-8">
+                    <h2>Rebecca "But it says 'Fun for <i>all</i> ages' " Sullivan</h2><br>
+                    <h4>I'm really a dancer in disguise...</h4><br>
+                    <p>Please prove that to be true in this section</p><br>
+                    <button class="btn btn-default btn-lg" href="mailto:rhhsullivan@gmail.com">Email Rebecca</button>
+                </div>
+            </div>
+        </div>
+
+        <div id="drew" class="container-fluid">
+            <div class="row">
+                <div class="col-sm-8">
+                    <h2>Drew &nbsp;"<i>[insert humor]</i>"&nbsp; Sullivan</h2><br>
+                    <h4>Incessantly trying to be funny, Drew hits his mark about 20% of the time... on a good day.</h4><br>
+                    <p>It's true.</p><br>
+                    <button class="btn btn-default btn-lg" href="mailto:drew.sullivan.dma@gmail.com">Email Drew</button>
+                </div>
+                <div class="col-sm-4">
+                    <img src="images/Drew.jpg"/>
+                </div>
+            </div>
+        </div>
+
+
+        <div id="myCarousel" class="carousel slide text-center" data-ride="carousel">
+            <h2>What Our Parents Say About Us</h2>
+            <!-- Dots Below Quotes -->
+            <ol class="carousel-indicators">
+                <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+                <li data-target="#myCarousel" data-slide-to="1"></li>
+                <li data-target="#myCarousel" data-slide-to="2"></li>
+                <li data-target="#myCarousel" data-slide-to="3"></li>
+            </ol>
+            <!-- Wrapper for slides -->
+            <div class="carousel-inner" role="listbox">
+                <div class="item active">
+                    <h4>"Did you know that Rebecca could read before she was born? Probably even before that. Oh! And she's a dancer!"<br><span style="font-style:normal;">Susan Hurd, Rebecca's Mom</span></h4>
+                </div>
+                <div class="item">
+                    <h4>"I never understood why Lyman adopted the Texan accent. He only lived there a couple years..."<br><span style="font-style:normal;">John Hurd, Lyman's Father</span></h4>
+                </div>
+                <div class="item">
+                    <h4>"No one will know one punnier than one Glenn Hurd"<br><span style="font-style:normal;">Lyman Hurd, Glenn's Pop</span></h4>
+                </div>
+                <div class="item">
+                    <h4>"Drew sure tries hard, bless his heart..."<br><span style="font-style:normal;">Tami Lenee, Drew's Mom</span></h4>
+                </div>
+            </div>
+            <!-- Left and right controls -->
+            <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+                <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+            </a>
+            <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+                <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+            </a>
+        </div>
+        </div> <!-- I'm not sure if this /div is an accident from the transfer over, but here it is just in case -->
+
+        <footer class="container-fluid text-center">
+            <a href="#myPage" title="To Top">
+                <span class="glyphicon glyphicon-chevron-up"></span>
+            </a>
+        </footer>
+        <script type="text/javascript" src="js/main.js"></script>
+    </body>
 </html>
