--- a/static/index.html
+++ b/static/index.html
@@ -15,7 +15,6 @@
     </head>
 
     <body id="myPage" data-spy="scroll" data-target=".navbar" data-offset="60">
-        <h1><a href="notakto/index.html">NoTakTo</a></h1>
         <nav class="navbar navbar-default navbar-fixed-top">
             <div class="container">
                 <div class="navbar-header">
@@ -42,9 +41,8 @@
             <p>Software. Because it's pretty neat.</p>
             <form>
                 <div class="input-group">
-                    <input type="email" class="form-control" size="50" placeholder="This doesn't go anywhere right now, but I suppose it could grab an email address" required>
                     <div class="input-group-btn">
-                    <button type="button" class="btn btn-danger">Subscribe</button>
+                        <button type="button" class="btn btn-danger" href="mailto:info@hurd-sullivan.com" style="border-radius: 5px;">Comments?</button>
                     </div>
                 </div>
             </form>
@@ -59,8 +57,8 @@
                 <div class="col-sm-8">
                     <h2>Lyman "A God Living Amongst Mankind" Hurd</h2><br>
                     <h4>Lyman regularly moves mountains and shifts the ocean's tides</h4><br>
-                    <p>Please prove that to be true in this section</p><br>
-                    <button class="btn btn-default btn-lg" href="mailto:glennqhurd@gmail.com">Email Lyman. He's got tons of free time</button>
+                    <p><a href="notakto/index.html">NoTakTo</a></p><br>
+                    <button class="btn btn-default btn-lg" href="mailto:lyman@hurd-sullivan.com">Email Lyman. He's got tons of free time.</button>
                 </div>
             </div>
         </div>
@@ -71,7 +69,7 @@
                     <h2>Glenn "I want to learn the ways of the force like my father" Hurd</h2><br>
                     <h4>Young Padawan</h4><br>
                     <p>Please prove that to be true in this section</p><br>
-                    <button class="btn btn-default btn-lg">Email Glenn</button>
+                    <button class="btn btn-default btn-lg" href="mailto:glenn@hurd-sullivan.com">Email Glenn</button>
                 </div>
                 <div class="col-sm-4">
                     <img src="images/glenn.jpg"/>
@@ -88,7 +86,7 @@
                     <h2>Rebecca "But it says 'Fun for <i>all</i> ages' " Sullivan</h2><br>
                     <h4>I'm really a dancer in disguise...</h4><br>
                     <p>Please prove that to be true in this section</p><br>
-                    <button class="btn btn-default btn-lg" href="mailto:rhhsullivan@gmail.com">Email Rebecca</button>
+                    <button class="btn btn-default btn-lg" href="mailto:rebecca@hurd-sullivan.com">Email Rebecca</button>
                 </div>
             </div>
         </div>
@@ -96,10 +94,10 @@
         <div id="drew" class="container-fluid">
             <div class="row">
                 <div class="col-sm-8">
-                    <h2>Drew &nbsp;"<i>[insert humor]</i>"&nbsp; Sullivan</h2><br>
-                    <h4>Incessantly trying to be funny, Drew hits his mark about 20% of the time... on a good day.</h4><br>
+                    <h2>Drew &nbsp;"<i>[insert humor]</i>&nbsp;" Sullivan</h2><br>
+                    <h4>Incessantly trying to be funny, Drew hits his mark about 3% of the time... on a good day.</h4><br>
                     <p>It's true.</p><br>
-                    <button class="btn btn-default btn-lg" href="mailto:drew.sullivan.dma@gmail.com">Email Drew</button>
+                    <button class="btn btn-default btn-lg" href="mailto:drew@hurd-sullivan.com">Email Drew</button>
                 </div>
                 <div class="col-sm-4">
                     <img src="images/Drew.jpg"/>
