More bootstrap formatting.

--- a/notakto/static/index.html
+++ b/notakto/static/index.html
@@ -19,21 +19,31 @@
 </head>
 
 <body>
-  <h1>NoTakTo</h1>
+  <!--<h1>NoTakTo</h1>-->
+  <ul class="nav">
+  <li class="nav-item">
+    <strong>NoTakTo</strong>
+  </li>
+  <li class="nav-item">
+    <button id="newGame" type="button" class="btn btn-outline-primary">
+      Start Game</button>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" href="#">Rules</a>
+  </li>
+
+</ul>
   <div class="btn-toolbar" role="toolbar" aria-label=
     "Toolbar with button groups">
       <div class="btn-group-lg mr-2" role="group" aria-label="First group">
         <button id="computerFirst" type="button" class="btn btn-primary">
           Computer Plays First</button>
-        <button id="newGame" type="button" class="btn btn-outline-primary">
-          Quit Game</button>
       </div>
       <div class="btn-group-lg mr-2" role="group" aria-label="Second group">
         <button id="plus" type="button" class="btn btn-outline-primary">+</button>
         <button id="minus" type="button" class="btn btn-outline-primary">-</button>
-        <!--<button id="newGame" type="button" class="btn btn-outline-primary">
-          Quit Game</button>-->
       </div>
+
     <!-- <button id="showLabels" type="button">Show Labels</button> -->
   </div>
   <div id="boxholder">
