--- a/notakto/static/index.html
+++ b/notakto/static/index.html
@@ -20,41 +20,21 @@
 
 <body>
   <!--<h1>NoTakTo</h1>-->
-  <ul class="nav">
-  <li class="nav-item">
-    <strong>NoTakTo</strong>
-  </li>
-  <li class="nav-item">
-    <button id="newGame" type="button" class="btn btn-outline-primary">
-      Start Game</button>
-  </li>
-  <li class="nav-item">
-    <a class="nav-link" href="#">Rules</a>
-  </li>
-
-</ul>
   <div class="btn-toolbar" role="toolbar" aria-label=
     "Toolbar with button groups">
       <div class="btn-group-lg mr-2" role="group" aria-label="First group">
-        <button id="computerFirst" type="button" class="btn btn-primary">
-          Computer Plays First</button>
-      </div>
-      <div class="btn-group-lg mr-2" role="group" aria-label="Second group">
+        <button id="newGame" type="button" class="btn btn-outline-primary">
+          Start</button>
         <button id="plus" type="button" class="btn btn-outline-primary">+</button>
         <button id="minus" type="button" class="btn btn-outline-primary">-</button>
       </div>
 
     <!-- <button id="showLabels" type="button">Show Labels</button> -->
   </div>
-  <div id="boxholder">
-    <div id="scorebox" class="alert alert-info alert-dismissible fade show"
-      role="alert">
-      <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-        <span aria-hidden="true">&times;</span>
-      </button>
-      <p id="status" class="statuses"></p>
-      <p id="score" class="scores">Human: 0 Computer: 0</p>
-    </div>
+  <div>
+      <span id="humanScore" class="scores">Human: 0</span>
+      <span id="computerScore" class="scores">Computer: 0</span>
+  </div>
   </div>
   <div id="frame">
     <canvas id="1" width=186 height=186 class="boards">
