more edits by Drew

--- a/static/index.html
+++ b/static/index.html
@@ -47,6 +47,7 @@
                     <h2>Glenn "I want to learn the ways of the force like my father" Hurd</h2><br>
                     <h4>Young Padawan</h4><br>
                     <p>Please prove that to be true in this section</p><br>
+                    <a href="http://www.gqhtutoring.com/home.html"><button type="button" class="btn bg-purple-pink">Visit Glenn Computer Science Tutoring Site</button></a>
                     <a href="http://glennqhurd.pythonanywhere.com"><button type="button" class="btn bg-purple-pink">Visit Glenn's Personal Site</button></a>
                 </div>
                 <div class="col-sm-4">
