Updated front page.

--- a/static/index.html
+++ b/static/index.html
@@ -36,7 +36,13 @@
                 <div class="col-sm-8">
                     <h2>Lyman "A God Living Amongst Mankind" Hurd</h2><br>
                     <h4>Lyman regularly moves mountains and shifts the ocean's tides</h4><br>
-                    <a href="notakto/index.html"><button type="button" class="btn bg-purple-pink">Checkout Lyman's Game - NoTakTo</button></a><br>
+                    <p>Thank you to my fans.  A professional software developer,
+                    believe it or not this is what I do on weekends for fun.  In
+                    my colleagues' view, for good reasons, I am kept safely away
+                    from the front end, so this is my forum to explore all the
+                    things I wish I knew more about.  This is combined with a
+                    passion for games and puzzles, e.g., my collaboration with Glenn on a Checkers AI.</p>
+                    <a href="notakto/index.html"><button type="button" class="btn bg-purple-pink">Checkout Lyman's Implementation of the Game - NoTakTo</button></a><br>
                 </div>
             </div>
         </div>
@@ -45,10 +51,15 @@
             <div class="row">
                 <div class="col-sm-8">
                     <h2>Glenn "I want to learn the ways of the force like my father" Hurd</h2><br>
-                    <h4>Young Padawan</h4><br>
-                    <p>Please prove that to be true in this section</p><br>
-                    <a href="http://www.gqhtutoring.com/home.html"><button type="button" class="btn bg-purple-pink">Visit Glenn Computer Science Tutoring Site</button></a>
-                    <a href="http://glennqhurd.pythonanywhere.com"><button type="button" class="btn bg-purple-pink">Visit Glenn's Personal Site</button></a>
+                    <h4>Seeker after truth...</h4><br>
+                    <p>Having completed his CS (and math) degree at Georgia State, Glenn is
+                    striving to expand his horizons by picking up new languages,
+                    new techniques and new challenges.  Happily he has inherited
+                    his father's love of games and puzzles which has led to
+                    numerous collaborations for the shear joy of it.</p><p>Glenn
+                    has a long history in customer service which he has channeled into designing usable interfaces as well as running his own tutoring business.</p><br>
+                    <a href="http://www.gqhtutoring.com/home.html"><button type="button" class="btn bg-purple-pink">Visit Glenn's Math/Computer Science Tutoring Site</button></a>
+                    <a href="http://glennqhurd.pythonanywhere.com"><button type="button" class="btn bg-purple-pink">Glenn and Lyman's Checkers Game</button></a>
                 </div>
                 <div class="col-sm-4">
                     <img src="images/glenn.jpg"/>
@@ -64,7 +75,10 @@
                 <div class="col-sm-8">
                     <h2>Rebecca "But it says 'Fun for <i>all</i> ages' " Sullivan</h2><br>
                     <h4>I'm really a dancer in disguise...</h4><br>
-                    <p>Please prove that to be true in this section</p><br>
+                    <p>Having danced in the preprofessional division of the Atlanta Ballet, and heading to college three years early,
+                    Becca went from degrees in Oboe performace and Dalcroze Eurhythmics, she then went on to complet eher MBA in Marketing.  In case anyone
+                    doubted that she could do anything, she finally decided that her father, brother and husband shouldn't have all the fun
+                    and has embarked on an adventure in software development.</p><br>
                     <a href="http://rebecca-sullivan.com"><button type="button" class="btn bg-purple-pink">Visit Rebecca's Personal Site</button></a><br>
                 </div>
             </div>
@@ -74,8 +88,10 @@
             <div class="row">
                 <div class="col-sm-8">
                     <h2>Drew &nbsp;"<i>[insert humor]</i>&nbsp;" Sullivan</h2><br>
-                    <h4>Incessantly trying to be funny, Drew hits his mark about 3% of the time... on a good day.</h4><br>
-                    <p>It's true.</p><br>
+                    <h4>Incessantly trying to be funny, Drew hits his mark about 3% of the time... on a good day.</h4><br/>
+                    <p>After finishing his PhD, Drew looked up an eagerly
+                    inquired "What's next?"  After finding out that they stopped making degrees, he is trying to climb a new mountain and is showing that the
+                    conventional wisdom that musicians can do anything is more than urban legend.</p><br/>
                     <a href="http://drew-sullivan-dma.com"><button type="button" class="btn bg-purple-pink">Visit Drew's Personal Site</button></a><br>
                 </div>
                 <div class="col-sm-4">
