--- a/notakto/static/index.html
+++ b/notakto/static/index.html
@@ -23,7 +23,7 @@
   <div class="btn-toolbar" role="toolbar" aria-label=
     "Toolbar with button groups">
       <div class="btn-group-lg mr-2" role="group" aria-label="First group">
-        <button id="newGame" type="button" class="btn btn-outline-primary">
+        <button id="gameStatus" type="button" class="btn btn-outline-primary">
           Start</button>
         <button id="minus" type="button" class="btn btn-outline-primary">-</button>
         <button id="plus" type="button" class="btn btn-outline-primary">+</button>
