--- a/notakto/static/index.html
+++ b/notakto/static/index.html
@@ -12,14 +12,7 @@
 </head>
 
 <body>
-  <html>
-
-<head>
-  <title>NoTakTo</title>
-</head>
-
-<body>
-  <!--<h1>NoTakTo</h1>-->
+  <a href="../index.html"><img id="logo" src="images/HS.gif" alt="Go to Hurd-Sullivan.com"/></a>
   <div class="btn-toolbar" role="toolbar" aria-label=
     "Toolbar with button groups">
       <div class="btn-group-lg mr-2" role="group" aria-label="First group">
@@ -28,8 +21,6 @@
         <button id="minus" type="button" class="btn btn-outline-primary">-</button>
         <button id="plus" type="button" class="btn btn-outline-primary">+</button>
       </div>
-
-    <!-- <button id="showLabels" type="button">Show Labels</button> -->
   </div>
   <div>
       <span id="humanScore" class="scores">Human: 0</span>
@@ -49,7 +40,6 @@
       <li><a href="discussion.html">More discussion.</a></li>
     </ul>
   </p>
-</html>
 
     <script src="js/notakto.js"></script>
     <script src="js/index.js"></script>
