--- a/static/header.html
+++ b/static/header.html
@@ -6,7 +6,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="/index.html">H-S</a>
+            <a class="navbar-brand" href="/index.html"><img id="hslogo" src="images/HS-white.gif" alt="Go to Hurd-Sullivan.com"/></a>
         </div>
         <div class="collapse navbar-collapse" id="myNavbar">
             <ul class="nav navbar-nav navbar-right">
