--- a/static/index.html
+++ b/static/index.html
@@ -3,7 +3,7 @@
     <head>
         <title>Hurd-Sullivan</title>
         <meta charset="UTF-8">
-        <link rel="shortcut icon" type ="image/x-icon" href="images/favicon.ico">
+        <link rel="icon" type ="image/x-icon" href="images/favicon.ico">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
         <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet" type="text/css">
