More style changes.

--- a/notakto/static/discussion.html
+++ b/notakto/static/discussion.html
@@ -5,17 +5,11 @@
   <title>NoTakTo Notes</title>
       <link rel="stylesheet" href="css/style.css">
       <link rel="shortcut icon" type ="image/x-icon" href="images/favicon.ico">
-
 </head>
 
-<body>
-  <html>
-
-<head>
-  <title>NoTakTo Notes</title>
-</head>
 
 <body>
+  <a href="../index.html"><img id="hslogo" src="images/HS.gif" alt="Go to Hurd-Sullivan.com"/></a>
   <h1>NoTakTo Notes</h1>
   <p><a href="index.html">Play game.</a></p>
   <p>After some playing around you will come to the realization that if there
@@ -61,6 +55,5 @@
     src="https://www.youtube.com/embed/v494yltz_7I">
   </iframe>
   </div>
-</html>
 </body>
 </html>
