--- a/notakto/static/index.html
+++ b/notakto/static/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-  <a href="../index.html"><img id="logo" src="images/HS.gif" alt="Go to Hurd-Sullivan.com"/></a>
+  <a href="../index.html"><img id="hslogo" src="images/HS.gif" alt="Go to Hurd-Sullivan.com"/></a>
   <div class="btn-toolbar" role="toolbar" aria-label=
     "Toolbar with button groups">
       <div class="btn-group-lg mr-2" role="group" aria-label="First group">
