--- a/notakto/static/index.html
+++ b/notakto/static/index.html
@@ -41,6 +41,7 @@
     </ul>
   </p>
 
+    <script src="js/monoid.js"></script>
     <script src="js/notakto.js"></script>
     <script src="js/index.js"></script>
     <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
