More work to add room for labels.

--- a/notakto/static/index.html
+++ b/notakto/static/index.html
@@ -28,9 +28,13 @@
   </div>
   </div>
   <div id="frame">
-    <canvas id="1" width=186 height=186 class="boards">
-     Your browser does not support HTML5.
-    </canvas>
+    <div class="boards">
+        <canvas id="0" width=186 height=186 class="board">
+            Your browser does not support HTML5.
+        </canvas>
+        <div class="label">
+        </div>
+    </div>
   </div>
   <p class="rules">
     <ul>
