Added Grundy's Game.

--- a/notakto/static/index.html
+++ b/notakto/static/index.html
@@ -36,6 +36,7 @@
         </div>
     </div>
   </div>
+  <div id="explanation">
   <p class="rules">
     <ul>
       <li>Red and Blue take turns playing X's.</li>
@@ -44,7 +45,7 @@
       <li><a href="discussion.html">More discussion.</a></li>
     </ul>
   </p>
-
+</div>
     <script src="js/monoid.js"></script>
     <script src="js/notakto.js"></script>
     <script src="js/index.js"></script>
