--- a/static/index.html
+++ b/static/index.html
@@ -42,7 +42,8 @@
                     from the front end, so this is my forum to explore all the
                     things I wish I knew more about.  This is combined with a
                     passion for games and puzzles, e.g., my collaboration with Glenn on a Checkers AI.</p>
-                    <a href="notakto/index.html"><button type="button" class="btn bg-purple-pink">Checkout Lyman's Implementation of the Game - NoTakTo</button></a><br>
+                    <a href="notakto/index.html"><button type="button" class="btn bg-purple-pink">Lyman's Implementation of the Game - NoTakTo</button></a>
+                    <a href="grundy.html"><button type="button" class="btn bg-purple-pink">Grundy's Game</button></a>
                 </div>
             </div>
         </div>
