--- a/static/index.html
+++ b/static/index.html
@@ -31,7 +31,7 @@
         <div id="lyman" class="container-fluid">
             <div class="row">
                 <div class="col-sm-4">
-                    <img src="images/Lyman.jpg"/>
+                    <img src="images/Lyman.jpg" alt="Picture of Lyman"/>
                 </div>
                 <div class="col-sm-8">
                     <h2>Lyman "A God Living Amongst Mankind" Hurd</h2><br>
@@ -63,7 +63,7 @@
                     <a href="http://glennqhurd.pythonanywhere.com"><button type="button" class="btn bg-purple-pink">Glenn and Lyman's Checkers Game</button></a>
                 </div>
                 <div class="col-sm-4">
-                    <img src="images/glenn.jpg"/>
+                    <img src="images/glenn.jpg" alt="Picture of Glenn"/>
                 </div>
             </div>
         </div>
@@ -71,7 +71,7 @@
         <div id="rebecca" class="container-fluid">
             <div class="row">
                 <div class="col-sm-4">
-                    <img src="images/Rebecca.jpg"/>
+                    <img src="images/Rebecca.jpg" alt="Picture of Rebecca"/>
                 </div>
                 <div class="col-sm-8">
                     <h2>Rebecca "But it says 'Fun for <i>all</i> ages' " Sullivan</h2><br>
@@ -96,7 +96,7 @@
                     <a href="http://drew-sullivan-dma.com"><button type="button" class="btn bg-purple-pink">Visit Drew's Personal Site</button></a><br>
                 </div>
                 <div class="col-sm-4">
-                    <img src="images/Drew.jpg"/>
+                    <img src="images/Drew.jpg" alt="Picture of Drew"/>
                 </div>
             </div>
         </div>
